[gd_scene load_steps=15 format=2]

[ext_resource path="res://traps/fireball_projectile.gd" type="Script" id=1]
[ext_resource path="res://traps/fireball.wav" type="AudioStream" id=2]
[ext_resource path="res://traps/explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://traps/fire.wav" type="AudioStream" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 0.15
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
scale = 0.2
scale_curve = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
params_blend_mode = 1
params_cull_mode = 1
albedo_color = Color( 0.913725, 0.443137, 0.0980392, 1 )

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )
radius = 2.0
height = 2.25
radial_segments = 4
rings = 2

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 0.15
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
linear_accel = 1.0
scale = 0.2
scale_curve = SubResource( 7 )

[sub_resource type="SphereShape" id=9]
radius = 0.35

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("OmniLight:omni_range")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 4.0, 4.2, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OmniLight:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="FireballProjectile" type="KinematicBody"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="BallParticles" type="Particles" parent="."]
lifetime = 0.5
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="Tail" type="Particles" parent="."]
amount = 12
lifetime = 0.5
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="ExplosionParticles" type="Particles" parent="."]
emitting = false
amount = 22
lifetime = 0.75
one_shot = true
explosiveness = 0.75
local_coords = false
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 5 )

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 1, 0.831373, 0.32549, 1 )
shadow_enabled = true
shadow_color = Color( 0.313726, 0.313726, 0.313726, 1 )
omni_range = 4.0
omni_attenuation = 2.82843

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 9 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 10 )

[node name="ExplosionSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
max_distance = 30.0

[node name="ShootSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = -10.0
max_distance = 30.0

[node name="FireSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
autoplay = true
max_distance = 30.0
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
